--- a/topics/introduction.dita
+++ b/topics/introduction.dita
@@ -9,5 +9,6 @@
             colored environment. Flowers can be selected for specific blooming seasons, colors and
             shapes. Both annual and <xref keyref="perennial" format="dita">perennial</xref>
             flower gardens can be planted depending on climate and specific needs.</p>
+        <p>A brand new pragraph.</p>
     </body> 
 </topic>
