--- a/topics/introduction.dita
+++ b/topics/introduction.dita
@@ -10,5 +10,6 @@
             shapes. Both annual and <xref keyref="perennial" format="dita">perennial</xref>
             flower gardens can be planted depending on climate and specific needs.</p>
         <p>A brand new pragraph.</p>
+        <p>And another one.</p>
     </body> 
 </topic>
